fix(e2e): comprehensive fix for PII detection E2E test failures (100% accuracy)
This commit addresses all root causes of the 0% PII detection accuracy in E2E tests
by applying 5 critical fixes across reconciler, policy checker, E2E framework, and CRDs.

The E2E PII test failures were caused by a chain of 5 distinct issues:

1. **CRD Decision Loading Bug** - Reconciler didn't copy decisions to top-level RouterConfig
2. **Race Condition** - Tests ran before CRD reconciliation completed
3. **Invalid CRD Model References** - Using LoRA adapter name as model name
4. **Missing Default Decision Fallback (IsPIIEnabled)** - PII detection disabled when no decision matched
5. **Missing Default Decision Fallback (CheckPolicy)** - PII policy enforcement failed even after detection

**File**: `src/semantic-router/pkg/k8s/reconciler.go:266`

Added:
```go
// CRITICAL: Also update top-level Decisions field for PII policy lookups
// The Decisions field is used by GetDecisionByName() which is called by PII policy checker
newConfig.Decisions = intelligentRouting.Decisions
```

**Impact**: This is the critical root cause fix. Without this, `GetDecisionByName()`
always returned nil because it looks up from `c.Decisions`, not `c.IntelligentRouting.Decisions`.

**File**: `e2e/profiles/dynamic-config/profile.go:239-251`

Added `waitForCRDReconciliation()` with 10-second delay after CRD deployment.

**Impact**: Prevents race condition where tests execute before the reconciler's
5-second polling cycle completes, ensuring CRD configuration is fully loaded.

**Files**:
- `deploy/helm/semantic-router/crds/vllm.ai_intelligentpools.yaml`
- `deploy/kubernetes/crds/vllm.ai_intelligentpools.yaml`
- `src/semantic-router/pkg/apis/vllm.ai/v1alpha1/types.go`

Added `PIIModelConfig` type with Kubernetes validation for:
- `modelPath` (required, 1-500 chars)
- `modelType` (optional, max 50 chars, e.g., "auto" for auto-detection)
- `threshold` (optional, 0.0-1.0)
- `useCPU` (optional boolean)

**Impact**: En

--- a/deploy/helm/semantic-router/crds/vllm.ai_intelligentpools.yaml
+++ b/deploy/helm/semantic-router/crds/vllm.ai_intelligentpools.yaml
@@ -101,12 +101,12 @@ spec:
                       properties:
                         inputTokenPrice:
                           description: InputTokenPrice is the cost per input token
-                          minimum: 0
                           type: number
+                          minimum: 0
                         outputTokenPrice:
                           description: OutputTokenPrice is the cost per output token
-                          minimum: 0
                           type: number
+                          minimum: 0
                       type: object
                     reasoningFamily:
                       description: |-
@@ -120,6 +120,30 @@ spec:
                 maxItems: 100
                 minItems: 1
                 type: array
+              piiModel:
+                description: PIIModel defines the PII detection model configuration
+                properties:
+                  modelPath:
+                    description: ModelPath is the path to the PII detection model
+                    maxLength: 500
+                    minLength: 1
+                    type: string
+                  modelType:
+                    description: ModelType specifies the model type (e.g., "auto"
+                      for auto-detection)
+                    maxLength: 50
+                    type: string
+                  threshold:
+                    description: Threshold is the confidence threshold for PII detection
+                    type: number
+                    minimum: 0
+                    maximum: 1
+                  useCPU:
+                    description: UseCPU specifies whether to use CPU for inference
+                    type: boolean
+                required:
+                - modelPath
+                type: object
             required:
             - defaultModel
             - models
