fix(e2e): enable LoRA PII detection for aibrix profile
This commit fixes PII detection test failures for the aibrix profile by switching
from the non-functional ModernBERT PII model to LoRA-based auto-detection, matching
the configuration already proven to work in dynamic-config and ai-gateway profiles.

## Problem

The aibrix profile PII detection test was failing with 0% accuracy (0/100 tests passed).
All 100 PII test requests were passing through without being blocked, even though they
contained sensitive data like credit cards, SSNs, emails, and IP addresses.

## Root Causes

**Same issues as ai-gateway had before the previous fix**:

1. **Using outdated ModernBERT PII model**:
   - Profile was using `models/pii_classifier_modernbert-base_presidio_token_model`
   - ModernBERT classifier initialized but never detected any PII entities
   - No "Detected PII" or "PII token classification" logs during test runs
   - Result: 0% detection accuracy

2. **Missing default_decision fallback**:
   - No catch-all decision for PII policy fallback mechanism
   - PII policy code (src/semantic-router/pkg/utils/pii/policy.go) falls back to "default_decision"
   - Without it, edge cases with empty decision names would disable PII detection

3. **No profile-specific model configuration**:
   - Test was using inherited E2E_TEST_MODEL from previous test runs
   - Not explicitly configured for aibrix's model: vllm-llama3-8b-instruct
   - Could cause inconsistent behavior across test runs

## Solution

### 1. Switch AIBrix to LoRA PII Detection (deploy/kubernetes/aibrix/semantic-router-values/values.yaml)

**Change 1**: Updated pii_model configuration (lines 459-466)
```yaml
pii_model:
  # Support both traditional (modernbert) and LoRA-based PII detection
  # When model_type is "auto", the system will auto-detect LoRA configuration
  model_id: "models/lora_pii_detector_bert-base-uncased_model"
  model_type: "auto"  # Enables LoRA auto-detection
  threshold: 0.7
  use_cpu: true
  pii_m

--- a/deploy/kubernetes/aibrix/semantic-router-values/values.yaml
+++ b/deploy/kubernetes/aibrix/semantic-router-values/values.yaml
@@ -380,6 +380,26 @@ config:
             system_prompt: "You are a thinking expert, should think multiple steps before answering. Please answer the question step by step."
             mode: "replace"
 
+    # Default catch-all decision for unmatched requests (E2E PII test fix)
+    # This ensures PII detection is always enabled via policy.go fallback mechanism
+    # When no decision matches, CheckPolicy and IsPIIEnabled fall back to this decision
+    - name: default_decision
+      description: "Default catch-all decision - blocks all PII for safety"
+      priority: 0
+      rules:
+        operator: "OR"
+        conditions:
+          - type: "domain"
+            name: "other"
+      modelRefs:
+        - model: vllm-llama3-8b-instruct
+          use_reasoning: false
+      plugins:
+        - type: "pii"
+          configuration:
+            enabled: true
+            pii_types_allowed: []
+
   # Strategy for selecting between multiple matching decisions
   # Options: "priority" (use decision with highest priority) or "confidence" (use decision with highest confidence)
   strategy: "priority"
@@ -437,11 +457,13 @@ config:
       use_cpu: true
       category_mapping_path: "models/category_classifier_modernbert-base_model/category_mapping.json"
     pii_model:
-      model_id: "models/pii_classifier_modernbert-base_presidio_token_model"
-      use_modernbert: true
+      # Support both traditional (modernbert) and LoRA-based PII detection
+      # When model_type is "auto", the system will auto-detect LoRA configuration
+      model_id: "models/lora_pii_detector_bert-base-uncased_model"
+      model_type: "auto"  # Enables LoRA auto-detection
       threshold: 0.7
       use_cpu: true
-      pii_mapping_path: "models/pii_classifier_modernbert-base_presidio_token_model/pii_type_mapping.json"
+      pii_mapping_path: "models/lora_pii_detector_bert-base-uncased_model/pii_type_mapping.json"
 
   keyword_rules:
     - name: "thinking"
