feat(classifier): enable LoRA auto-detection for jailbreak classification
Implement LoRA auto-detection for jailbreak classifier following the same
pattern as intent and PII classifiers (PR #726). Completes the LoRA trilogy
with trained model achieving 89.1% accuracy (exceeds ModernBERT 84.2% baseline).

Changes:
- Add LoRA auto-detection to jailbreak classifier initialization
- Implement classify_with_index method for FFI compatibility
- Update jailbreak classifier to try LoRA first, fallback to traditional BERT
- Update all configuration files to use LoRA jailbreak model
- Switch from jailbreak_classifier_modernbert-base to lora_jailbreak_classifier_bert-base-uncased

Technical Details:
- Auto-detection checks for lora_config.json to determine model type
- Uses SecurityLoRAClassifier for LoRA models
- Maintains backward compatibility with traditional BERT models
- Model uploaded to HuggingFace: llm-semantic-router/lora_jailbreak_classifier_bert-base-uncased_model

Performance:
- Accuracy: 89.1% (vs 84.2% ModernBERT baseline)
- F1 Score: 88.9%
- Precision: 89.7%
- Recall: 88.1%

Fixes #725

Signed-off-by: Yossi Ovadia <yovadia@redhat.com>

Signed-off-by: Yossi Ovadia <yovadia@redhat.com>

--- a/config/prompt-guard/jailbreak_domain.yaml
+++ b/config/prompt-guard/jailbreak_domain.yaml
@@ -5,17 +5,17 @@
 # Global jailbreak detection configuration (can be overridden per category)
 prompt_guard:
   enabled: true  # Global default - can be overridden per category
-  use_modernbert: true
-  model_id: "models/jailbreak_classifier_modernbert-base_model"
+  use_modernbert: false
+  model_id: "models/lora_jailbreak_classifier_bert-base-uncased_model"
   threshold: 0.7  # Global default threshold - can be overridden per category
   use_cpu: true
-  jailbreak_mapping_path: "models/jailbreak_classifier_modernbert-base_model/jailbreak_type_mapping.json"
+  jailbreak_mapping_path: "models/lora_jailbreak_classifier_bert-base-uncased_model/jailbreak_type_mapping.json"
 
 # Classifier configuration
 classifier:
   category_model:
     model_id: "models/category_classifier_modernbert-base_model"
-    use_modernbert: true
+    use_modernbert: false
     threshold: 0.6
     use_cpu: true
     category_mapping_path: "models/category_classifier_modernbert-base_model/category_mapping.json"
