--- a/config/config.prompt_guard.vllm.yaml
+++ b/config/config.prompt_guard.vllm.yaml
@@ -48,10 +48,10 @@ prompt_guard:
   # Response parser type: "qwen3guard", "json", "simple", or "auto" (auto-detects from model name)
   response_parser_type: "qwen3guard"  # Qwen3Guard uses structured output format
   threshold: 0.7
-  jailbreak_mapping_path: "models/jailbreak_classifier_modernbert-base_model/jailbreak_type_mapping.json"
+  jailbreak_mapping_path: "models/lora_jailbreak_classifier_bert-base-uncased_model/jailbreak_type_mapping.json"
   # Candle fields (ignored when use_vllm: true)
-  # use_modernbert: true
-  # model_id: "models/jailbreak_classifier_modernbert-base_model"
+  # use_modernbert: false
+  # model_id: "models/lora_jailbreak_classifier_bert-base-uncased_model"
   # use_cpu: true
 
 # vLLM Endpoints Configuration
@@ -73,13 +73,13 @@ model_config:
 classifier:
   category_model:
     model_id: "models/category_classifier_modernbert-base_model"
-    use_modernbert: true
+    use_modernbert: false
     threshold: 0.6
     use_cpu: true
     category_mapping_path: "models/category_classifier_modernbert-base_model/category_mapping.json"
   pii_model:
     model_id: "models/pii_classifier_modernbert-base_presidio_token_model"
-    use_modernbert: true
+    use_modernbert: false
     threshold: 0.7
     use_cpu: true
     pii_mapping_path: "models/pii_classifier_modernbert-base_presidio_token_model/pii_type_mapping.json"
