--- a/config/intelligent-routing/in-tree/keyword.yaml
+++ b/config/intelligent-routing/in-tree/keyword.yaml
@@ -34,11 +34,11 @@ tools:
 
 prompt_guard:
   enabled: true  # Global default - can be overridden per category with jailbreak_enabled
-  use_modernbert: true
-  model_id: "models/jailbreak_classifier_modernbert-base_model"
+  use_modernbert: false
+  model_id: "models/lora_jailbreak_classifier_bert-base-uncased_model"
   threshold: 0.7
   use_cpu: true
-  jailbreak_mapping_path: "models/jailbreak_classifier_modernbert-base_model/jailbreak_type_mapping.json"
+  jailbreak_mapping_path: "models/lora_jailbreak_classifier_bert-base-uncased_model/jailbreak_type_mapping.json"
 
 # vLLM Endpoints Configuration
 # IMPORTANT: 'address' field must be a valid IP address (IPv4 or IPv6)
@@ -59,13 +59,13 @@ model_config:
 classifier:
   category_model:
     model_id: "models/category_classifier_modernbert-base_model"
-    use_modernbert: true
+    use_modernbert: false
     threshold: 0.6
     use_cpu: true
     category_mapping_path: "models/category_classifier_modernbert-base_model/category_mapping.json"
   pii_model:
     model_id: "models/pii_classifier_modernbert-base_presidio_token_model"
-    use_modernbert: true
+    use_modernbert: false
     threshold: 0.7
     use_cpu: true
     pii_mapping_path: "models/pii_classifier_modernbert-base_presidio_token_model/pii_type_mapping.json"
