--- a/config/observability/config.tracing.yaml
+++ b/config/observability/config.tracing.yaml
@@ -23,11 +23,11 @@ tools:
 
 prompt_guard:
   enabled: true
-  use_modernbert: true
-  model_id: "models/jailbreak_classifier_modernbert-base_model"
+  use_modernbert: false
+  model_id: "models/lora_jailbreak_classifier_bert-base-uncased_model"
   threshold: 0.7
   use_cpu: true
-  jailbreak_mapping_path: "models/jailbreak_classifier_modernbert-base_model/jailbreak_type_mapping.json"
+  jailbreak_mapping_path: "models/lora_jailbreak_classifier_bert-base-uncased_model/jailbreak_type_mapping.json"
 
 vllm_endpoints:
   - name: "endpoint1"
@@ -43,13 +43,13 @@ model_config:
 classifier:
   category_model:
     model_id: "models/category_classifier_modernbert-base_model"
-    use_modernbert: true
+    use_modernbert: false
     threshold: 0.6
     use_cpu: true
     category_mapping_path: "models/category_classifier_modernbert-base_model/category_mapping.json"
   pii_model:
     model_id: "models/pii_classifier_modernbert-base_presidio_token_model"
-    use_modernbert: true
+    use_modernbert: false
     threshold: 0.7
     use_cpu: true
     pii_mapping_path: "models/pii_classifier_modernbert-base_presidio_token_model/pii_type_mapping.json"
