feat: add domain-specific cache embedding training pipeline
Implement production-grade pipeline for training LoRA adapters on
domain-specific cache embeddings based on arXiv:2504.02268v1.

Key features:
- One-command training automation (train-domain.sh)
- vLLM-based synthetic data generation with GPU acceleration
- LoRA fine-tuning with MNR loss for contrastive learning
- AWS deployment scripts with automatic provisioning and cleanup
- Interactive HTML documentation with tooltips
- Support for multiple domains (medical, legal, financial, etc.)

Pipeline workflow:
1. Generate synthetic triplets from unlabeled queries using vLLM
2. Train lightweight LoRA adapter (582KB) with proper contrastive learning
3. Validate with margin-based testing (21.4% improvement demonstrated)
4. Deploy to HuggingFace for production use

Technical improvements:
- Removed Ollama backend (vLLM-only for consistency)
- Fixed triplet format for proper MNR loss training
- Streaming writes with checkpoint/resume capability
- Multi-GPU tensor parallelism support
- Professional documentation with interactive tooltips

File structure:
- train-domain.sh: Main automation script
- generate_training_data.py: vLLM data generation
- lora_trainer.py: LoRA fine-tuning
- test_lora_model.py: Margin-based validation
- domains/: Config files for each domain
- aws/: Automated AWS deployment scripts
- docs/: Comprehensive documentation (HTML + Markdown)

Signed-off-by: Yossi Ovadia <yovadia@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,7 @@ FactCHD_dataset/
 **/lora_*_model/
 **/lora_*_model_rust/
 *.safetensors
+
+# AWS deployment files (contain instance IPs and IDs)
+src/training/cache_embeddings/aws/vllm-instance-*.txt
+src/training/cache_embeddings/aws/vllm-inventory-*.ini
