--- a/src/training/cache_embeddings/domains/prompts.yaml
+++ b/src/training/cache_embeddings/domains/prompts.yaml
@@ -28,7 +28,7 @@ domains:
   health:
     role: "helpful medical expert"
     topic_name: "medical query"
-    recommended_model: "Qwen/Qwen2.5-1.5B-Instruct"  # General instruction-following model
+    recommended_model: "Qwen/Qwen2.5-7B-Instruct"  # General instruction-following model
 
     paraphrase_guidelines: |
       1. Preserve the original medical meaning but use different wording or sentence structure
@@ -239,7 +239,126 @@ domains:
           - "What procedures must employers follow when conducting workplace investigations?"
           - "How does the EPA enforce violations of the Clean Water Act?"
 
-# TODO: Add prompts for remaining 11 domains when needed:
+  # PSYCHOLOGY - NUCLEAR Strategy: 8 distinct subfields for mandatory topic jumps
+  psychology:
+    role: "psychology expert assistant"
+    topic_name: "psychology query"
+    recommended_model: "Qwen/Qwen2.5-7B-Instruct"
+
+    paraphrase_guidelines: |
+      1. Preserve the original psychological meaning but use different wording or sentence structure
+      2. Avoid changing the psychological concept or introducing new information
+      3. Be professionally written using appropriate psychological terminology
+      4. Maintain scientific accuracy
+
+    paraphrase_examples:
+      - original: "What are the symptoms of generalized anxiety disorder?"
+        paraphrases:
+          - "How is generalized anxiety disorder characterized?"
+          - "What signs indicate someone may have generalized anxiety disorder?"
+          - "What are the typical manifestations of GAD?"
+
+      - original: "How does working memory function?"
+        paraphrases:
+          - "What is the role of working memory in cognition?"
+          - "How does working memory operate in the brain?"
+          - "What processes are involved in working memory?"
+
+    negative_guidelines: |
+      ⚠️ NUCLEAR STRATEGY - RELATED BUT DIFFERENT ASPECT ⚠️
+
+      Generate negatives that are RELATED to the same topic but ask about DIFFERENT ASPECTS.
+      Stay within the same general area but shift the focus.
+
+      STEP 1: IDENTIFY THE TOPIC
+      Extract the core topic from the anchor:
+      - If about "anxiety disorder" → topic is "anxiety"
+      - If about "working memory" → topic is "memory systems"
+      - If about "child development milestones" → topic is "child development"
+      - If about "social influence" → topic is "social psychology phenomena"
+
+      STEP 2: SHIFT THE ASPECT (Use different question types)
+      If anchor asks about → Negative asks about
+      ================================================
+      Symptoms/Signs → Causes, Risk factors, Treatment, or Prevention
+      Diagnosis/Assessment → Treatment, Prognosis, or Epidemiology
+      Treatment → Side effects, Efficacy, Contraindications, or Alternative treatments
+      Causes/Etiology → Symptoms, Diagnosis, or Prevention
+      Development/Stages → Factors affecting development, Individual differences, or Assessment
+      Function/Process → Neural basis, Disorders affecting it, or Development of the function
+
+      STEP 3: STAY RELATED BUT DISTINCT
+      - **DO**: Keep the same disorder/concept but change the aspect
+        ✅ "symptoms of anxiety disorder" → "treatment options for anxiety disorder"
+        ✅ "symptoms of anxiety disorder" → "risk factors for developing anxiety"
+        ✅ "symptoms of anxiety disorder" → "neurobiological causes of anxiety"
+
+      - **DON'T**: Jump to completely unrelated topics
+        ❌ "symptoms of anxiety disorder" → "groupthink in decision making"
+        ❌ "working memory function" → "child development milestones"
+
+      - **DON'T**: Reword or paraphrase the anchor
+        ❌ "symptoms of anxiety disorder" → "signs of anxiety disorder"
+        ❌ "working memory function" → "how working memory works"
+
+      STEP 4: VERIFICATION (MANDATORY)
+      Before finalizing each negative, ask:
+      1. "Does the negative relate to the same core topic/entity as anchor?" → Should be YES
+      2. "Does the negative ask about a DIFFERENT aspect than anchor?" → Must be YES
+      3. "Is this just a rewording of the anchor?" → Must be NO
+
+      EXAMPLES OF COMPLETE FAILURE (WHAT NOT TO DO):
+      ❌ Anchor: "What are symptoms of anxiety disorder?" → Negative: "What are signs of anxiety disorder?" (just rewording)
+      ❌ Anchor: "What are symptoms of anxiety disorder?" → Negative: "How does groupthink affect decision making?" (completely unrelated)
+      ❌ Anchor: "How does working memory function?" → Negative: "What is working memory capacity?" (too similar)
+
+      EXAMPLES OF SUCCESS (WHAT TO DO):
+      ✅ Anchor: "What are symptoms of anxiety disorder?" → Negative: "What causes anxiety disorders to develop?"
+      ✅ Anchor: "What are symptoms of anxiety disorder?" → Negative: "How are anxiety disorders treated with CBT?"
+      ✅ Anchor: "What are symptoms of anxiety disorder?" → Negative: "What risk factors increase likelihood of anxiety disorders?"
+      ✅ Anchor: "How does working memory function?" → Negative: "What brain regions are involved in working memory?"
+      ✅ Anchor: "How does working memory function?" → Negative: "How does aging affect working memory capacity?"
+      ✅ Anchor: "What is operant conditioning?" → Negative: "How is operant conditioning applied in behavior therapy?"
+      ✅ Anchor: "What is operant conditioning?" → Negative: "What are the neural mechanisms underlying operant conditioning?"
+
+    negative_examples:
+      - original: "What are symptoms of generalized anxiety disorder?"
+        bad_negatives:
+          - "What are signs of generalized anxiety disorder?"
+          - "How does anxiety disorder present clinically?"
+        good_negatives:
+          - "What are the risk factors for developing generalized anxiety disorder?"
+          - "How is generalized anxiety disorder treated with cognitive behavioral therapy?"
+          - "What neurobiological mechanisms contribute to anxiety disorders?"
+
+      - original: "How does working memory function?"
+        bad_negatives:
+          - "How does working memory operate?"
+          - "What is the capacity of working memory?"
+        good_negatives:
+          - "What brain regions are involved in working memory processing?"
+          - "How does aging affect working memory performance?"
+          - "What disorders impair working memory function?"
+
+      - original: "What is operant conditioning?"
+        bad_negatives:
+          - "What does operant conditioning mean?"
+          - "How does operant conditioning work?"
+        good_negatives:
+          - "How is operant conditioning applied in behavior therapy?"
+          - "What are the neural mechanisms underlying operant conditioning?"
+          - "When was operant conditioning first discovered and by whom?"
+
+      - original: "What are the Big Five personality traits?"
+        bad_negatives:
+          - "What are the five major personality traits?"
+          - "Can you list the Big Five personality dimensions?"
+        good_negatives:
+          - "How is the Big Five personality model assessed in clinical settings?"
+          - "What genetic factors influence Big Five personality traits?"
+          - "How do Big Five traits predict job performance and career success?"
+
+# TODO: Add prompts for remaining 10 domains when needed:
 # - biology
 # - business
 # - chemistry
@@ -249,5 +368,4 @@ domains:
 # - math
 # - philosophy
 # - physics
-# - psychology
 # - other (generic)
