feat: add multi-domain cache embedding training pipeline
Production-ready two-step pipeline for training domain-specific cache
embedding LoRA adapters achieving +19.4% average improvement across 4
validated domains (medical, law, programming, psychology).

Key features:
- Synthetic training data generation using vLLM (Qwen 2.5 7B)
- LoRA fine-tuning with Multiple Negatives Ranking loss
- Single 582KB multi-domain adapter covering all 4 domains
- AWS automation for GPU training (g5.12xlarge)
- Checkpoint/resume, streaming I/O, multi-GPU support

Results:
- Medical: +14.6% margin improvement (112K triplets)
- Law: +16.9% margin improvement (127K triplets)
- Programming: +11.3% margin improvement (208K triplets)
- Psychology: +34.9% margin improvement (169K triplets)
- Average: +19.4% with single 582KB adapter

Based on research: arXiv:2504.02268v1

Signed-off-by: Yossi Ovadia <yovadia@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,7 @@ FactCHD_dataset/
 *.safetensors
 
 .vllm-sr/
+
+# AWS deployment files (contain instance IPs and IDs)
+src/training/cache_embeddings/aws/vllm-instance-*.txt
+src/training/cache_embeddings/aws/vllm-inventory-*.ini
