--- a/tools/linter/shellcheck/.shellcheckrc
+++ b/tools/linter/shellcheck/.shellcheckrc
@@ -1,8 +1,1 @@
-disable=SC2155 # Declare and assign separately
-disable=SC2034 # Unused variables
-disable=SC1091 # Not following sourced files (e.g., venv activate scripts)
-disable=SC2011 # Use of ls in pipelines (acceptable for training scripts)
-disable=SC2012 # Use of ls with wildcards (acceptable for training scripts)
-disable=SC2087 # Heredoc expansion (intentional for training scripts)
-disable=SC2120 # Function references arguments (false positive)
-disable=SC2162 # read without -r (not critical for training scripts)
+disable=SC2155,SC2034,SC1091,SC2011,SC2012,SC2087,SC2120,SC2162
