--- a/src/training/iterative_mining/requirements.txt
+++ b/src/training/iterative_mining/requirements.txt
@@ -2,14 +2,9 @@
 sentence-transformers>=2.2.0
 torch>=2.0.0
 transformers>=4.30.0
-datasets>=2.14.0
-openai>=1.0.0  # For LLM-as-judge via OpenAI API or vLLM endpoint
 numpy>=1.24.0
 scikit-learn>=1.3.0
 tqdm>=4.65.0
 
-# Data processing
-pandas>=2.0.0
-
-# Optional: for MedQuAD dataset
-requests>=2.31.0
+# Data loading (for HuggingFace datasets)
+datasets>=2.14.0
