feat(dashboard): add Router Replay visualization page for debugging routing decisions (#1211)
Implement a new Router Replay page in the dashboard under System dropdown menu,
allowing users to view and analyze router replay records that capture routing
decisions, signals, model selections, and plugin status for debugging purposes.
Resolves issue #1197.

Features:
- List view with sortable table displaying request ID, timestamp, decision,
  category, model changes, cache status, and response status
- Filtering by decision name, category, status, and cache hit
- Search by request ID with real-time filtering
- Pagination with configurable page size (25 records per page)
- Expandable rows showing detailed signals (keyword, embedding, domain,
  fact_check, user_feedback, preference) and plugin status
- Collapsible sections for request/response body inspection
- Sticky table headers with scroll support for large datasets

New files:
- ReplayPage.tsx: Main page component with table, filters, and pagination
- ReplayPage.module.css: Page-specific styles following dashboard design patterns
- CollapsibleSection.tsx: Reusable component for expandable content sections
- CollapsibleSection.module.css: Collapsible section styles

Modified:
- App.tsx: Added /replay route
- Layout.tsx: Added Router Replay to System dropdown menu
- DataTable.module.css: Added sticky headers and vertical scroll support
- index.css: Fixed missing CSS variable definitions (--color-surface, --color-primary-hover) that were used but never defined in StatusPage and LogsPage
- store/store.go, recorder.go: Added ConfidenceScore and SelectionMethod fields to router replay records for dashboard display
- req_filter_looper.go: Added router replay support for looper execution (selection method, status, and response body capture)

Signed-off-by: noalimoy <nlimoy@redhat.com>

--- a/src/vllm-sr/cli/templates/router-defaults.yaml
+++ b/src/vllm-sr/cli/templates/router-defaults.yaml
@@ -19,6 +19,16 @@ response_api:
   ttl_seconds: 86400       # 24 hours
   max_responses: 1000
 
+# Router Replay Configuration
+# Records all routing decisions for debugging and analysis
+router_replay:
+  enabled: true
+  store_backend: "memory"  # Options: "memory"
+  max_records: 1000
+  capture_request_body: true
+  capture_response_body: true
+  max_body_bytes: 4096
+
 semantic_cache:
   enabled: true
   backend_type: "memory"  # Options: "memory", "milvus", or "hybrid"
