--- a/src/vllm-sr/cli/templates/router-defaults.yaml
+++ b/src/vllm-sr/cli/templates/router-defaults.yaml
@@ -10,6 +10,7 @@
 #   "models/mom-feedback-detector": "llm-semantic-router/feedback-detector"
 #   "models/mom-embedding-pro": "Qwen/Qwen3-Embedding-0.6B"
 #   "models/mom-embedding-flash": "google/embeddinggemma-300m"
+#   "models/mom-embedding-ultra": "llm-semantic-router/mmbert-embed-32k-2d-matryoshka"
 
 # Response API Configuration
 # Enables OpenAI Response API support with conversation chaining
@@ -19,15 +20,13 @@ response_api:
   ttl_seconds: 86400       # 24 hours
   max_responses: 1000
 
-# Router Replay Configuration
-# Records all routing decisions for debugging and analysis
+# Router Replay Configuration (System-Level)
+# Provides storage backend configuration for router_replay plugin
+# Per-decision settings (max_records, capture settings) are configured via router_replay plugin
 router_replay:
-  enabled: true
-  store_backend: "memory"  # Options: "memory"
-  max_records: 1000
-  capture_request_body: true
-  capture_response_body: true
-  max_body_bytes: 4096
+  store_backend: "memory"  # Options: "memory", "redis", "postgres", "milvus"
+  ttl_seconds: 2592000     # 30 days retention (for persistent backends)
+  async_writes: false      # Enable async writes for better performance
 
 semantic_cache:
   enabled: true
@@ -47,14 +46,9 @@ semantic_cache:
   # backend_config_path: "config/milvus.yaml" # Path to Milvus config
 
   # Embedding model for semantic similarity matching
-  # Options: "bert" (fast, 384-dim), "qwen3" (high quality, 1024-dim, 32K context), "gemma" (balanced, 768-dim, 8K context)
-  # Default: "bert" (fastest, lowest memory)
-  embedding_model: "bert"
-
-bert_model:
-  model_id: models/mom-embedding-light
-  threshold: 0.6
-  use_cpu: true
+  # If not specified, automatically uses the model configured in embedding_models section
+  # Options: "mmbert" (multilingual, 768-dim), "qwen3" (high quality, 1024-dim, 32K context), "gemma" (balanced, 768-dim, 8K context)
+  # embedding_model: "mmbert"  # Optional: explicitly set if you want to override auto-detection
 
 tools:
   enabled: true
@@ -135,20 +129,29 @@ feedback_detector:
 #     access_key: ""  # Optional: for Authorization header (Bearer token)
 
 # Embedding Models Configuration
-# These models provide intelligent embedding generation with automatic routing:
-# - Qwen3-Embedding-0.6B: Up to 32K context, high quality,
-# - EmbeddingGemma-300M: Up to 8K context, fast inference, Matryoshka support (768/512/256/128)
+# This is the UNIFIED configuration for all embedding-related features:
+# - Semantic Cache: Automatically uses the configured model
+# - Tool Selection: Uses the configured model for tool matching
+# - Embedding Signal: Uses the model specified in hnsw_config.model_type
+# - Complexity Signal: Uses the model specified in hnsw_config.model_type
+#
+# Available models:
+# - Qwen3-Embedding-0.6B (Pro): Up to 32K context, high quality, 1024-dim
+# - EmbeddingGemma-300M (Flash): Up to 8K context, fast inference, Matryoshka support (768/512/256/128)
+# - mmBERT-Embed-32K-2D-Matryoshka (Ultra): Up to 32K context, 1800+ languages, 2D Matryoshka (layer early exit + dimension reduction)
 embedding_models:
-  qwen3_model_path: "models/mom-embedding-pro"
+  # qwen3_model_path: "models/mom-embedding-pro"
   # gemma_model_path: "models/mom-embedding-flash"
+  mmbert_model_path: "models/mom-embedding-ultra"
   use_cpu: true  # Set to false for GPU acceleration (requires CUDA)
   # HNSW Configuration
   # Improves performance by preloading candidate embeddings at startup
   # and using HNSW index for O(log n) similarity search
   hnsw_config:
-    model_type: "qwen3"         # Which model to use: "qwen3" (high quality) or "gemma" (fast)
+    model_type: "mmbert"         # Which model to use: "qwen3" (high quality), "gemma" (fast), or "mmbert" (multilingual)
     preload_embeddings: true    # Precompute candidate embeddings at startup
-    target_dimension: 1024       # Embedding dimension
+    target_dimension: 768        # Embedding dimension (1024 for qwen3, 768 for gemma/mmbert)
+    # For mmbert only: target_layer (3/6/11/22) for layer early exit
     enable_soft_matching: true
     min_score_threshold: 0.5
 
